# gazebo_sfm_plugin

./: CMakeLists.txt  package.xml
include/gazebo_sfm_plugin/: AttachModelPlugin.hh  PedestrianHSFM2Plugin.h  PedestrianHSFMPlugin.h  PedestrianMHSFMPlugin.h  PedestrianSFM2Plugin.h  PedestrianSFMPlugin copy.h  PedestrianSFMPlugin.h  VisualizeForcesPlugin.h  angle.hpp  hsfm.hpp  hsfm2.hpp  map.hpp  mhsfm.hpp  rkf45.hpp  sfm.hpp  sfm2.hpp  vector2d.hpp
launch/: save_forces_experiment.launch.py  save_forces_experiment2.launch.py  test_ALL_sfm_forces_visual.launch.py  test_RKF45_ALL_sfm_forces_visual.launch.py  test_bottleneck_hsfm.launch.py  test_bottleneck_mhsfm.launch.py  test_bottleneck_sfm.launch.py  test_bottleneck_sfm2.launch.py  test_group_hsfm.launch.py  test_group_hsfm2.launch.py  test_group_mhsfm.launch.py  test_group_sfm.launch.py  test_group_sfm2.launch.py  test_hsfm.launch.py  test_hsfm2.launch.py  test_hsfm2_forces_visual.launch.py  test_hsfm_forces_visual.launch.py  test_mhsfm.launch.py  test_mhsfm_forces_visual.launch.py  test_sfm.launch.py  test_sfm2.launch.py  test_sfm2_forces_visual.launch.py  test_sfm_forces_visual.launch.py
models/: SFM.stl  SFM2.stl  desired_force.stl  walk_green.dae
msg/: Forces.msg  Obstacle.msg  Person.msg  Point.msg  UUID.msg  Vector3.msg
scripts/: save_and_print_forces.py  spawn_robot.py
src/: AttachModelPlugin.cc  PedestrianHSFM2Plugin.cpp  PedestrianHSFMPlugin.cpp  PedestrianMHSFMPlugin.cpp  PedestrianSFM2Plugin.cpp  PedestrianSFMPlugin copy 2.cpp  PedestrianSFMPlugin copy.cpp  PedestrianSFMPlugin.cpp  VisualizeForcesPlugin.cpp
worlds/: save_forces_experiment.world  save_forces_experiment2.world  test_ALL_sfm_forces_visual.world  test_RKF45_ALL_sfm_forces_visual.world  test_bottleneck_hsfm.world  test_bottleneck_mhsfm.world  test_bottleneck_sfm.world  test_bottleneck_sfm2.world  test_group_hsfm.world  test_group_hsfm2.world  test_group_mhsfm.world  test_group_sfm.world  test_group_sfm2.world  test_hsfm.world  test_hsfm2.world  test_hsfm2_forces_visual.world  test_hsfm_forces_visual.world  test_mhsfm.world  test_mhsfm_forces_visual.world  test_sfm.world  test_sfm2.world  test_sfm2_forces_visual.world  test_sfm_forces_visual.world
